fix(quoted-text): Do not consider gmail_extra quoted text
I don't know what gmail_extra is used for, but it appears from @mg's sample messages that it does not indicate quoted regions of the body. We also weren't looking for it in our hasQuotedText function.

--- a/static/email-frame.less
+++ b/static/email-frame.less
@@ -63,14 +63,12 @@
     border: 0;
   }
 
-  .gmail_extra,
   .gmail_quote,
   #divRplyFwdMsg,
   blockquote {
     display:none;
   }
 
-  .show-quoted-text .gmail_extra,
   .show-quoted-text .gmail_quote,
   .show-quoted-text #divRplyFwdMsg,
   .show-quoted-text blockquote {
